Correcciones primera entrega - div/section/nav/vinculos

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
     src: url(../fonts/Century\ Gothic\ Normal.TTF);
 }
 
-header {
+nav {
     background-color: #231942;
     width: 100%;
     padding: 5px;
