--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,6 @@
     src: url(../fonts/Century\ Gothic\ Normal.TTF);
 }
 
-
 nav {
     background-color: #eacaff;
     width: 100%;
@@ -187,8 +186,8 @@ footer {
 }
 
 .grid1 {
+    min-height: 500px;
     width: 100%;
-    height: 50vh;
 
     display: grid;
     grid-template-columns: repeat(4 1fr) ;
@@ -198,6 +197,7 @@ footer {
     "img1 img2 parrafo parrafo"
     "img1 img2 parrafo parrafo"
     "img1 img2 parrafo parrafo";
+    gap: 4px;
 }
 .grid1__img1 {
     grid-area: img1;
@@ -214,8 +214,7 @@ footer {
 
 .grid2 {
     width: 100%;
-    height: 50vh;
-
+    min-height: 500px;
     display: grid;
     grid-template-columns: repeat(4 1fr) ;
     grid-template-rows: repeat(4, 1fr);
@@ -224,6 +223,7 @@ footer {
     "parrafo1 parrafo1 imge1 imge2"
     "parrafo1 parrafo1 imge1 imge2"
     "parrafo1 parrafo1 imge1 imge2";
+    column-gap: 4px;
 }
 .grid2__img1 {
     grid-area: imge1;
@@ -236,5 +236,47 @@ footer {
 }
 .grid2__parrafo{
     grid-area: parrafo1;
+}
+
+.linea-division {
+    width: 50%;
+    height: 2px;
+    background-color: #eacaff;
+}
+
+/* .alinear {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.alinear img {
+
+    position: relative;
+    z-index: -1;
+}
+*/
+
+
+.d-item img {
+    filter: brightness(0.9)
+}
+.subtitulo {
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    margin: 7px 0;
+    font-size: 80px;
+    font-weight: 500;
+    text-shadow: 2px 2px 1px rgba(0,0,0,0.7);
+    font-family: 'Dancing Script', cursive;
+    margin-top: 0;
+   
+} 
+.descripcion {
+    font-family: 'Dancing Script', cursive;
+    color: #ffffff75;
+    font-size: 30px;
 }
 
