--- a/css/main.css
+++ b/css/main.css
@@ -14,29 +14,17 @@
     src: url(../fonts/Century\ Gothic\ Normal.TTF);
 }
 
-nav {
+.navegacion {
     background-color: #eacaff;
-    width: 100%;
-    position: sticky;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
 }
-
-
 
 .menu {   
     text-decoration: none;
     font-family: sans-serif;
     font-weight:bolder;
-    list-style-type: none;
-    padding: 10px;  
-    gap: 20px;
+    list-style-type: none;      
+    gap: 5px;
     display: flex;
-    flex-direction: row;
-    justify-content: end;
     align-items: center; 
 }
 
@@ -44,7 +32,7 @@ nav {
     font-family: CenturyGothic;
     text-decoration: none;
     font-size: 20px;
-    color: #ffffff;
+    color: #9f86c0;
 }
 
 .translate {
@@ -87,7 +75,7 @@ nav {
         font-family: CenturyGothic;
         text-decoration: none;
         font-size: 24px;
-        color: #ce75b3;
+        color: #754da8;
 
     }
 
@@ -103,17 +91,6 @@ nav {
     width: auto;
     max-height: fit-content;
 }
-/* 
-.seccion1 {
-    background-image: url(../images/fondo1.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
 
 .divtext_titulo {
     font-family: HighSpirited;
@@ -125,8 +102,6 @@ nav {
     justify-items: center;
     align-items: center;
 }
-
-
 
 .seccion2 {
     padding: 40px;
@@ -153,17 +128,6 @@ nav {
 .card {
     background-color: #eacaff;
 }
-
-/* .tarjetas {
-    width: 100%;
-    background-color: #eacaff;
-    border-radius: 5px;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}  */
 
 .card_image {
     border-radius: 5px;
@@ -214,14 +178,15 @@ nav {
     justify-content: center;
     align-items: center;
 }
-footer {
+
+/* footer {
     background-color:#eacaff;
     color: white;
     padding: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
+} */
 
 .grid1 {
     min-height: 500px;
@@ -304,6 +269,30 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
+    .subtitulo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        margin: 7px 0;
+        font-size: 40px;
+        font-weight: 500;
+        text-shadow: 2px 2px 1px rgba(0,0,0,0.7);
+        font-family: 'Dancing Script', cursive;
+        margin-top: 0;
+       
+    } 
+
+    .descripcion {
+        font-family: 'Dancing Script', cursive;
+        color: #ffffff75;
+        font-size: 10px;
+    }
+
+    .boton {
+       opacity: 0%;
+    }
+
     .grid1 {
         max-height: 200px;
         max-width: 768px;
@@ -317,20 +306,7 @@ footer {
         "titulo titulo"
         "parrafo parrafo";
     }
-
-    .grid1__img1 {
-            grid-area: img1;
-    }
-    .grid1__img2{
-               grid-area: img2;
-    }
-    .grid1__titulo{
-        grid-area: titulo;
-        }
-    .grid1__parrafo{
-            grid-area: parrafo;
-        }
-    
+      
     .grid2 {
             max-height: 200px;
             max-width: 768px;
