Incorporando SAAS al nav y footer

--- a/css/main_modificado.css
+++ b/css/main_modificado.css
@@ -1,8 +1,9 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: none;
 }
+
 
 @font-face {    
     font-family: "HighSpirited";
@@ -42,7 +43,7 @@
 .translate:hover {
     transform: translateY(-5px);
     filter: brightness(1)
-}
+} */
 
 .rotate-vert-center {
 	-webkit-animation: rotate-vert-center 5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
@@ -71,7 +72,7 @@
   }
   
 
-.inicio {
+/* .inicio {
         font-family: CenturyGothic;
         text-decoration: none;
         font-size: 24px;
@@ -85,7 +86,7 @@
     flex-direction: row;
     justify-items: flex-start;
     align-items: flex-start;
-}
+} */
 
 .main{
     width: auto;
@@ -162,8 +163,9 @@
     height: 100vh;
 }
 
+/* 
 .formulario {
-    background-color: #9f86c0;
+    background-color: #9f86c06c;
     box-shadow: 5px 1px 20px;
     height: 50%;
     width: 50%;
@@ -174,6 +176,7 @@
 }
 
 .formulario h2 {
+    color: rgba(64, 0, 107, 0.74);
     font-family: HighSpirited;
     font-size: 4vw;
 }
@@ -187,7 +190,7 @@
 
 .seccion3 {
     background-image: url(../images/contacto.jpeg)
-}   
+}    */
 
 footer {
     background-color:#eacaff;
@@ -510,3 +513,129 @@ footer {
 
     }
 
+    body{
+        height: 100%; 
+        font-family: 'Noto Sans', sans-serif;
+      background-color: #ab4493; 
+    }
+    .contact_form{	
+        width: 460px; 
+      height: auto;
+      margin: 80px auto;
+        border-radius: 10px;  
+        padding-top: 30px;
+        padding-bottom: 20px;  
+      background-color: #fbfbfb; 
+      padding-left: 30px; 
+    }
+    
+    
+    input{
+        background-color: #fbfbfb; 
+        width: 408px; 
+        height: 40px; 
+        border-radius: 5px;  
+        border-style: solid; 
+        border-width: 1px; 
+        border-color: #ab4493; 
+        margin-top: 10px;  
+        padding-left: 10px;
+      margin-bottom: 20px; 
+    }
+    
+    
+    textarea{
+      background-color: #fbfbfb; 
+        width: 405px; 
+        height: 150px; 
+        border-radius: 5px;  
+        border-style: solid; 
+        border-width: 1px; 
+        border-color: #ab4493; 
+        margin-top: 10px;  
+        padding-left: 10px;
+      margin-bottom: 20px; 
+      padding-top: 15px; 
+    }
+    
+    
+    label{
+      display: block; 
+        float: center; 	
+    }
+    
+    
+    button{
+        height: 45px; 
+        padding-left: 5px;
+        padding-right: 5px; 	
+        margin-bottom: 20px; 
+        margin-top: 10px; 	
+        text-transform: uppercase;
+        background-color: #ab4493; 
+        border-color: #ab4493; 
+        border-style: solid; 
+        border-radius: 10px;	
+        width: 420px;   
+      cursor: pointer;
+    }
+    
+    
+    button p{
+        color: #fff; 
+    }
+    
+    
+    span{
+        color: #ab4493; 
+    }
+    
+    
+    .aviso{
+        font-size: 13px;  
+        color: #0e0e0e;  
+    }
+    
+    
+    h1{
+        font-size: 39px;  
+        text-align: letf; 
+        padding-bottom: 20px; 
+        color: #ab4493;
+    }
+    
+    
+    h3{
+        font-size: 16px; 
+        padding-bottom: 30px;
+        color: #0e0e0e;   
+    }
+    
+    
+    p{
+        font-size: 14px; 
+        color: #0e0e0e; 
+    }
+    
+    
+    ::-webkit-input-placeholder {
+     color: #a8a8a8;
+    }
+    
+    
+    ::-webkit-textarea-placeholder {
+     color: #a8a8a8;
+    }
+    
+    
+    .formulario input:focus{
+        outline:0;
+        border: 1px solid #97d848;
+    }
+    
+    
+    .formulario textarea:focus{
+        outline:0;
+        border: 1px solid #97d848;
+    }
+    
