Saas aplicado para las paginas restantes

--- a/css/assets/_footer.scss
+++ b/css/assets/_footer.scss
@@ -12,4 +12,8 @@ footer {
             filter: brightness(1)
         }
     }
+
+    .footer_der {
+        background-color: rgba(0, 0, 0, 0.1);
+    }
 }
